--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -22,7 +22,7 @@
 
     <body>
         <header>
-            <!-- place navbar here -->
+             {% include 'components/navbar.html' %}
         </header>
         <main>
             {% block body %}
