--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -15,8 +15,12 @@
                         class="visually-hidden">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'contact %'}">Contact us</a>
+                <a class="nav-link" href="{% url 'contact' %}">Contact us</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'all_products' %}">All Products</a>
+            </li>
+
             {% if user.is_authenticated %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
