--- a/templates/shop/products.html
+++ b/templates/shop/products.html
@@ -1,19 +1,54 @@
 {% extends 'layout/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
+{% block css %}
+<style>
+    .product-img {
+        height: 200px;
+        object-fit: cover;
+        object-position: top;
+    }
+</style>
+{% endblock css %}
+
+
 
 {% block body %}
+<div class="container">
+    <div class="d-flex gap-2 justify-content-center py-5">
+        {% for brand in brands %}
+        <span
+            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+
+        {% if brand.logo %}
+        <img class="rounded-circle me-1" width="24" height="24" src="{{brand.logo.url}}" alt="">{{brand.name}}
+
+        {% else %}
+        <img class="rounded-circle me-1" width="24" height="24" src="{% static 'images/default_product.jpg' %}"
+            alt="">{{brand.name}}
+
+        {% endif %}
+        </span>
+        {% endfor %}
+    </div>
+</div>
 <div class="container" py-5>
     <div class="row">
         <div class="col">
             <form method="get">
-                {{filter.form.as_p}}
+                {{filter.form|crispy}}
                 <input type="submit" value="filter">
             </form>
         </div>
-        <div class="col-md-8">
-            {% for item in filter.qs %}
-            {{item.name}}
-            {% empty %}
+        <div class="col-md-10">
+            <div class="container-fluid">
+                <div class="row">
+                    {% for item in filter.qs %}
+                    {% include 'components/product_card.html' with product=item %}
+                    {% empty %}
+                </div>
+            </div>
             <div class="alert alert-primary" role="alert">
                 <strong>Warning!</strong>No Product available
             </div>
